test/good/strings/format05.px

a = "A"
print "{{}}"
print "{{a}}."
print "{{{a}{a}}}"
print "{{{{}}{a}"
print "{a}{{{a}{{{{a}}}}a}}}}"
