test/bad/generators/type03.px

a: {Char}
b: Char...
b = a
